# proc-des-onboarding-labs

./: .gitignore
lab1/: CMakeLists.txt  notes.md
lab1/include/: name.hpp
lab1/src/: hello.cpp  name.cpp
onboarding-lab-2/: CMakeLists.txt  ReadMe.md  vcpkg.json
onboarding-lab-2/dv/: CMakeLists.txt  exercise3.cpp  sim_time.cpp
onboarding-lab-2/rtl/: CMakeLists.txt  Exercise1.sv  Exercise2.sv  Exercise3.sv  Exercise4.sv
onboarding-lab-3/: CMakeLists.txt  ReadMe.md  vcpkg.json
onboarding-lab-3/dv/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp
onboarding-lab-4/: .clang-format  .gitignore  CMakeLists.txt  ReadMe.md  vcpkg.json
onboarding-lab-4/cmake/: BootstrapVcpkg.cmake
onboarding-lab-4/dv/: CMakeLists.txt  exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp
onboarding-lab-4/rtl/: CMakeLists.txt  Exercise1.sv  Exercise2.sv  Exercise3.sv  Exercise4.sv
onboarding-lab-4/rtl/Mysteries/: Mystery1.sv  Mystery2.sv
onboarding-lab-5/: CMakeLists.txt  vcpkg-configuration.json  vcpkg.json
onboarding-lab-5/.github/workflows/: main.yaml
onboarding-lab-5/dv/: CMakeLists.txt  Module.cpp
onboarding-lab-5/rtl/: CMakeLists.txt  Module.sv
